--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "prebuild": "node scripts/generate-greeting-images.js",
+    "prebuild": "NODE_ENV=production node scripts/generate-greeting-images.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
