create the generateQuiz function and table

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:db": "jest tests/database",
+    "test:quiz": "jest tests/database/generateQuiz.test.js",
+    "test:quiz-question": "jest tests/database/generateQuizQuestion.test.js",
     "generate-greeting-images": "node scripts/generate-greeting-images.js"
   },
   "dependencies": {
